# `poetry` configurations
[tool.poetry]
name = "govuk-tech-docs-sphinx-theme"
version = "1.0.0"
description = "A Sphinx theme to replicate the GOV.UK Tech Docs Template."
authors = ["ukgovdatascience <gds-data-science@digital.cabinet-office.gov.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ukgovdatascience/govuk-tech-docs-sphinx-theme"
repository = "https://github.com/ukgovdatascience/govuk-tech-docs-sphinx-theme"
documentation = "https://ukgovdatascience.github.io/govuk-tech-docs-sphinx-theme"
keywords = ["sphinx", "theme"]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^8.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.6"
detect-secrets = "^1.5.0"
myst-parser = "^4.0.1"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-mock = "^3.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src/govuk_tech_docs_sphinx_theme"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
